2006-04-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (WM_IME_*): Define (DWORD type).
	(EM_*IMESTATUS): Define.
	(WM_*): Define.
	(XBUTTON*): Define.
	Thanks to:    Steve Folly <spfolly at users dot sf dot net>

2006-03-31  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnetwk.h (WNetGetResourceInformationW):  Correct first param.
	Thanks to: Rene Rivera  <grafik at users dot sf dot net>

2006-03-29  Christopher Faylor  <cgf@timesys.com>

	* include/winspool.h: Protect use of PRINTER_ENUM_VALUESW with proper
	version conditional.

2006-03-29  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winspool.h (JOB_INFO_3): Add structure.
	(PROVIDOR_INFO_*{AW}): Add structure.
	* include/winspool.h [_WIN32_WINNT >= 0x0500]
	(PRINTER_ENUM_VALUES{AW}): Add structure.
	(PRINTPROCESSOR_CAPS): Add structure.

2006-03-29  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winspool.h [_WIN32_WINNT >= 0x0500]
	(PRINTER_INFO_7A): Correct definition.

2006-03-29  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winspool.h [_WIN32_WINNT >= 0x0500]
	(DRIVER_INFO_*{AW}): Add structure.
	(PRINTER_INFO_*{AW}): Add structure.
	Thanks to:   Roland Schwingel <rolandschwingel at users dot sf dot net>

2006-03-29  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winspool.h [_WIN32_WINNT >= 0x0500]
	(DRIVER_*MODE): Define (DWORD type).
	Thanks to:   Roland Schwingel <rolandschwingel at users dot sf dot net>

2006-03-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wincon.h (GetConsoleProcessList): Declare.

2006-03-27  Hansres Engel  <engel@node.ch>

	* include/mlang.h: New file.

2006-03-26  Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (SetProcessWorkingSetSize): Corrected define.

2006-03-26  Hansres Engel  <engel@node.ch>

         Add Uniscribe API for typography and for complex scripts.
	* include/usp10.h: New file.